--- a/web/index.html
+++ b/web/index.html
@@ -1,12 +1,9 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="utf-8">
-    <title>Yew Sample App</title>
-    <script type="module">
-        import init from "./pkg/web.js"
-        init()
-    </script>
+
 </head>
-<body></body>
+<body>
+
+</body>
 </html>
